feat(evaluator): implementar API de avaliação de Jogo da Velha (end-to-end)
Estrutura em src/main/java/br/com/petros/avaluator com camadas: application, domain e infrastructure/web.

Domain: Board, CellMark, GameStatus, GameResult; InvalidBoardException; BoardEvaluator com regras de contagem (X-O deve ser 0 ou 1), detecção de vitória (3 linhas, 3 colunas, 2 diagonais), bloqueio de dupla vitória, verificação de paridade (se X vence: diff=1; se O vence: diff=0) e estados DRAW/ONGOING.

Application: ApplicationConfig; EvaluateBoardUseCase e EvaluateBoardUseCaseImpl delegando a avaliação ao serviço.

Infra Web: EvaluatorApiController (POST /api/evaluator/evaluate) recebendo board JSON e retornando status/winner; WebDtoMapper validando board/r1/r2/r3 e normalizando células nulas/ausentes para EMPTY; ApiExceptionHandler traduzindo exceções de contrato/consistência em respostas HTTP.

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 				<version>7.6.0</version>
 				<executions>
 					<execution>
-						<id>generate-matrix-api</id>
+						<id>generate-avaluator-api</id>
 						<phase>generate-sources</phase>
 						<goals>
 							<goal>generate</goal>
